<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditProfileActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/profilePictureGuideline2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.3"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/iconGuideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/labelGuideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.24" />

        <ImageView
            android:id="@+id/nicknameIcon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nickname"
            android:cropToPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/emailIcon2"
            app:layout_constraintEnd_toEndOf="@+id/nameIcon2"
            app:layout_constraintStart_toStartOf="@+id/nameIcon2"
            app:layout_constraintTop_toBottomOf="@+id/nameIcon2"
            app:srcCompat="@mipmap/nickname_icon_round" />

        <ImageView
            android:id="@+id/locationIcon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location"
            android:cropToPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/interestsIcon2"
            app:layout_constraintEnd_toEndOf="@+id/emailIcon2"
            app:layout_constraintStart_toStartOf="@+id/emailIcon2"
            app:layout_constraintTop_toBottomOf="@+id/emailIcon2"
            app:srcCompat="@mipmap/location_icon_round" />

        <ImageView
            android:id="@+id/interestsIcon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/interests"
            android:cropToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/locationIcon2"
            app:layout_constraintStart_toStartOf="@+id/locationIcon2"
            app:layout_constraintTop_toBottomOf="@+id/locationIcon2"
            app:srcCompat="@mipmap/interests_icon_round" />

        <ImageView
            android:id="@+id/nameIcon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/name"
            android:cropToPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/nicknameIcon2"
            app:layout_constraintEnd_toEndOf="@+id/iconGuideline2"
            app:layout_constraintStart_toStartOf="@+id/iconGuideline2"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
            app:srcCompat="@mipmap/account_icon_round" />

        <ImageView
            android:id="@+id/emailIcon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/email"
            android:cropToPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/locationIcon2"
            app:layout_constraintEnd_toEndOf="@+id/nicknameIcon2"
            app:layout_constraintStart_toStartOf="@+id/nicknameIcon2"
            app:layout_constraintTop_toBottomOf="@+id/nicknameIcon2"
            app:srcCompat="@mipmap/email_icon_round" />

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/profilePictureGuideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/roundCardView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:elevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintDimensionRatio="1:1">

                    <ImageView
                        android:id="@+id/image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/profile_image"
                        android:scaleType="centerCrop"
                        tools:srcCompat="@mipmap/avatar" />

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                android:id="@+id/imageEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <ImageButton
                android:id="@+id/imageRotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:onClick="rotateBitmap"
                app:srcCompat="@android:drawable/ic_menu_rotate" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/emailIcon2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:text="@string/interests"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/labelGuideline2"
            app:layout_constraintTop_toTopOf="@+id/interestsIcon2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/nicknameIcon2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/labelGuideline2"
            app:layout_constraintTop_toTopOf="@+id/nameIcon2"
            tools:layout_goneMarginRight="16dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/locationIcon2" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/undefined"
            android:inputType="textPersonName"
            android:maxLength="45"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.133" />

        <EditText
            android:id="@+id/nicknameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            android:maxLength="45"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.13" />


        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="70"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.13" />

        <EditText
            android:id="@+id/locationEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:inputType="text"
            android:maxLength="45"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.133" />

        <Spinner
            android:id="@+id/mySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/labelGuideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>